# omakasetli

./: .editorconfig  LICENSE  README.md
.github/workflows/: deploy.yml
backend/: .env.sample  .gcloudignore  .gitignore  main.py  pyproject.toml  requirements.txt  sample.ipynb
backend/src/domain/: __init__.py  setlist.py  track.py  user.py
backend/src/driver/: __init__.py  firestore_driver.py  sample_driver.py
backend/src/driver/cache/: user_tracks_sample.pkl
backend/src/interactor/: __init__.py  solver_interactor.py
backend/src/interface/driver/: __init__.py  firestore_driver.py
backend/src/interface/repository/: __init__.py  room_repository.py  user_repository.py
backend/src/interface/usecase/: __init__.py  solver_usecase.py
backend/src/repository/: __init__.py  room_repository.py  sample_repository.py  user_repository.py
backend/src/rest/: __init__.py  exception.py  solver_resource.py
backend/src/solver/: __init__.py  base_solver.py  naive_max_solver.py  qubo_solver.py
backend/test/driver/: test_firestore_driver.py
backend/test/repository/: test_user_repository.py
backend/test/solver/: test_qubo_solver.py
frontend/: .env  .eslintrc.js  .gitignore  .stylelintrc.js  README.md  aspida.config.js  firestore.rules  next.config.js  package.json  site.config.ts  tsconfig.json
frontend/api/: $api.ts
frontend/api/setlist_solver/: index.ts
frontend/public/: robots.tx
frontend/public/favicons/: browserconfig.xml  site.webmanifest
frontend/src/: types.d.ts
frontend/src/collections/: user.ts
frontend/src/components/: AppFooter.tsx  (+14 more)
(+58 files in other folders)
