[tool.poetry]
name = "omakasetli-server"
version = "0.1.0"
description = ""
authors = ["Yosuke Mukasa"]

[tool.poetry.dependencies]
python = "^3.8"
amplify = "^0.4.1"
google-cloud-firestore = "^2.0.2"
firebase-admin = "^4.5.3"
grpcio = "^1.36.1"
flask = "^1.1.2"
numpy = "^1.20.1"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
isort = "^5.8.0"
mock-firestore = "^0.10.0"
coverage = "^5.5"
ipykernel = "^5.5.0"
python-dotenv = "^0.16.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
